@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password change for' %} {{ user }}{% endblock %}
@@ -13,11 +13,11 @@
 </script>
 {% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<form action="" method="post" accept-charset="utf-8">
 	<fieldset>
 		<legend>{% trans 'Password change for' %} {{ user }}</legend>
@@ -47,7 +47,7 @@
 	</form>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
 	<div class="box">
 		<h3>{% trans 'Password change' %}</h3>
 		<p>{% trans "Password change utility page. Please enter your new password twice so we can verify you typed it in correctly" %}.</p>
