@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Choose the location of your avatar" %}{% endblock %}
@@ -21,11 +21,11 @@
 </script>
 {% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">
 		{% if form.errors %}
 			{% for error,desc in form.errors.items %}
@@ -57,7 +57,7 @@
 		</form>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
   <div class="box">
     <h3>{% trans "Avatar selection page" %}</h3>
 		<p>{% trans "You have several options to select the image you want as avatar on your profile" %}.</p>
