@@ -1,14 +1,14 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Delete personal information" %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<form action="" method="post" enctype="multipart/form-data">
 		<fieldset>
 			<legend>{% trans "Delete your personal information" %}</legend>
@@ -17,7 +17,7 @@
 	</form>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
 	<div class="box">
 		<h3>{% trans "Remove profile" %}</h3>
 		<p>{% trans "It erases all your private data except your username. You can refill the information later if you want to" %}.</p>
